src/fr/harkame/l3/compilation/tp5/y.output
Terminaux inutilisés dans la grammaire

   QUIT


Grammaire

    0 $accept: liste $end

    1 liste: liste ligne
    2      | %empty

    3 ligne: expression '\n'

    4 expression: expression '|' expression
    5           | expression expression
    6           | expression '*'
    7           | '(' expression ')'
    8           | SYMB


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 3
'(' (40) 7
')' (41) 7
'*' (42) 6
'|' (124) 4
error (256)
SYMB (258) 8
QUIT (259)
CONCAT (260)


Non-terminaux, suivis des règles où ils apparaissent

$accept (11)
    à gauche: 0
liste (12)
    à gauche: 1 2, à droite: 0 1
ligne (13)
    à gauche: 3, à droite: 1
expression (14)
    à gauche: 4 5 6 7 8, à droite: 3 4 5 6 7


État 0

    0 $accept: . liste $end

    $défaut  réduction par utilisation de la règle 2 (liste)

    liste  aller à l'état 1


État 1

    0 $accept: liste . $end
    1 liste: liste . ligne

    $end  décalage et aller à l'état 2
    SYMB  décalage et aller à l'état 3
    '('   décalage et aller à l'état 4

    ligne       aller à l'état 5
    expression  aller à l'état 6


État 2

    0 $accept: liste $end .

    $défaut  accepter


État 3

    8 expression: SYMB .

    $défaut  réduction par utilisation de la règle 8 (expression)


État 4

    7 expression: '(' . expression ')'

    SYMB  décalage et aller à l'état 3
    '('   décalage et aller à l'état 4

    expression  aller à l'état 7


État 5

    1 liste: liste ligne .

    $défaut  réduction par utilisation de la règle 1 (liste)


État 6

    3 ligne: expression . '\n'
    4 expression: expression . '|' expression
    5           | expression . expression
    6           | expression . '*'

    SYMB  décalage et aller à l'état 3
    '|'   décalage et aller à l'état 8
    '('   décalage et aller à l'état 4
    '*'   décalage et aller à l'état 9
    '\n'  décalage et aller à l'état 10

    expression  aller à l'état 11


État 7

    4 expression: expression . '|' expression
    5           | expression . expression
    6           | expression . '*'
    7           | '(' expression . ')'

    SYMB  décalage et aller à l'état 3
    '|'   décalage et aller à l'état 8
    '('   décalage et aller à l'état 4
    '*'   décalage et aller à l'état 9
    ')'   décalage et aller à l'état 12

    expression  aller à l'état 11


État 8

    4 expression: expression '|' . expression

    SYMB  décalage et aller à l'état 3
    '('   décalage et aller à l'état 4

    expression  aller à l'état 13


État 9

    6 expression: expression '*' .

    $défaut  réduction par utilisation de la règle 6 (expression)


État 10

    3 ligne: expression '\n' .

    $défaut  réduction par utilisation de la règle 3 (ligne)


État 11

    4 expression: expression . '|' expression
    5           | expression . expression
    5           | expression expression .
    6           | expression . '*'

    '*'  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 5 (expression)

    expression  aller à l'état 11


État 12

    7 expression: '(' expression ')' .

    $défaut  réduction par utilisation de la règle 7 (expression)


État 13

    4 expression: expression . '|' expression
    4           | expression '|' expression .
    5           | expression . expression
    6           | expression . '*'

    SYMB  décalage et aller à l'état 3
    '('   décalage et aller à l'état 4
    '*'   décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 4 (expression)

    expression  aller à l'état 11
